analizadorTester/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> declaracion
Rule 1     declaracion -> tipo lista_identificadores SEMICOLON
Rule 2     declaracion -> tipo EQUALS lista_identificadores SEMICOLON
Rule 3     tipo -> INT
Rule 4     tipo -> FLOAT
Rule 5     tipo -> CHAR
Rule 6     tipo -> DOUBLE
Rule 7     lista_identificadores -> IDENTIFIER
Rule 8     lista_identificadores -> lista_identificadores COMMA IDENTIFIER

Terminals, with rules where they appear

CHAR                 : 5
COMMA                : 8
DOUBLE               : 6
EQUALS               : 2
FLOAT                : 4
IDENTIFIER           : 7 8
INT                  : 3
SEMICOLON            : 1 2
error                : 

Nonterminals, with rules where they appear

declaracion          : 0
lista_identificadores : 1 2 8
tipo                 : 1 2

Parsing method: LALR

state 0

    (0) S' -> . declaracion
    (1) declaracion -> . tipo lista_identificadores SEMICOLON
    (2) declaracion -> . tipo EQUALS lista_identificadores SEMICOLON
    (3) tipo -> . INT
    (4) tipo -> . FLOAT
    (5) tipo -> . CHAR
    (6) tipo -> . DOUBLE

    INT             shift and go to state 3
    FLOAT           shift and go to state 4
    CHAR            shift and go to state 5
    DOUBLE          shift and go to state 6

    declaracion                    shift and go to state 1
    tipo                           shift and go to state 2

state 1

    (0) S' -> declaracion .



state 2

    (1) declaracion -> tipo . lista_identificadores SEMICOLON
    (2) declaracion -> tipo . EQUALS lista_identificadores SEMICOLON
    (7) lista_identificadores -> . IDENTIFIER
    (8) lista_identificadores -> . lista_identificadores COMMA IDENTIFIER

    EQUALS          shift and go to state 8
    IDENTIFIER      shift and go to state 9

    lista_identificadores          shift and go to state 7

state 3

    (3) tipo -> INT .

    EQUALS          reduce using rule 3 (tipo -> INT .)
    IDENTIFIER      reduce using rule 3 (tipo -> INT .)


state 4

    (4) tipo -> FLOAT .

    EQUALS          reduce using rule 4 (tipo -> FLOAT .)
    IDENTIFIER      reduce using rule 4 (tipo -> FLOAT .)


state 5

    (5) tipo -> CHAR .

    EQUALS          reduce using rule 5 (tipo -> CHAR .)
    IDENTIFIER      reduce using rule 5 (tipo -> CHAR .)


state 6

    (6) tipo -> DOUBLE .

    EQUALS          reduce using rule 6 (tipo -> DOUBLE .)
    IDENTIFIER      reduce using rule 6 (tipo -> DOUBLE .)


state 7

    (1) declaracion -> tipo lista_identificadores . SEMICOLON
    (8) lista_identificadores -> lista_identificadores . COMMA IDENTIFIER

    SEMICOLON       shift and go to state 10
    COMMA           shift and go to state 11


state 8

    (2) declaracion -> tipo EQUALS . lista_identificadores SEMICOLON
    (7) lista_identificadores -> . IDENTIFIER
    (8) lista_identificadores -> . lista_identificadores COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 9

    lista_identificadores          shift and go to state 12

state 9

    (7) lista_identificadores -> IDENTIFIER .

    SEMICOLON       reduce using rule 7 (lista_identificadores -> IDENTIFIER .)
    COMMA           reduce using rule 7 (lista_identificadores -> IDENTIFIER .)


state 10

    (1) declaracion -> tipo lista_identificadores SEMICOLON .

    $end            reduce using rule 1 (declaracion -> tipo lista_identificadores SEMICOLON .)


state 11

    (8) lista_identificadores -> lista_identificadores COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 13


state 12

    (2) declaracion -> tipo EQUALS lista_identificadores . SEMICOLON
    (8) lista_identificadores -> lista_identificadores . COMMA IDENTIFIER

    SEMICOLON       shift and go to state 14
    COMMA           shift and go to state 11


state 13

    (8) lista_identificadores -> lista_identificadores COMMA IDENTIFIER .

    SEMICOLON       reduce using rule 8 (lista_identificadores -> lista_identificadores COMMA IDENTIFIER .)
    COMMA           reduce using rule 8 (lista_identificadores -> lista_identificadores COMMA IDENTIFIER .)


state 14

    (2) declaracion -> tipo EQUALS lista_identificadores SEMICOLON .

    $end            reduce using rule 2 (declaracion -> tipo EQUALS lista_identificadores SEMICOLON .)

